force-app/main/default/objects/Attendee__c/fields/CL_Object_ID__c.field-meta.xml
<CustomField>
    <fullName>CL_Object_ID__c</fullName>
    <description>ID of the Attendee in Concierge Live.</description>
    <externalId>true</externalId>
    <label>CL Object ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>