force-app/main/default/objects/Attendee__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <description>The date this event occurred.</description>
    <label>Event Date</label>
    <type>Date</type>
</CustomField>