force-app/main/default/objects/Attendee__c/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <description>The name of the event that this person attended.</description>
    <label>Event Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>