force-app/main/default/objects/Attendee__c/fields/Object_ID__c.field-meta.xml
<CustomField>
    <fullName>Object_ID__c</fullName>
    <description>The ID of this Attendee in Concierge Live.</description>
    <externalId>true</externalId>
    <label>Object ID</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>