force-app/main/default/objects/Attendee__c/fields/Requester_Name__c.field-meta.xml
<CustomField>
    <fullName>Requester_Name__c</fullName>
    <description>The name of the person who requested these tickets.</description>
    <label>Requester Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>