force-app/main/default/objects/Attendee__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Ticket Request state in Concierge Live.</description>
    <label>State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>