force-app/main/default/objects/Attendee__c/fields/Ticket_Count__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Count__c</fullName>
    <description>The number of tickets used by this attendee.</description>
    <label>Ticket Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>