force-app/main/default/objects/Attendee__c/fields/Ticket_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Request_ID__c</fullName>
    <description>The id of this ticket request in Concierge Live.</description>
    <externalId>true</externalId>
    <label>Ticket Request ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>