force-app/main/default/objects/Attendee__c/fields/Ticket_Value__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Value__c</fullName>
    <description>The total value of all tickets used by this attendee.</description>
    <label>Ticket Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>