force-app/main/default/objects/Attendee__c/fields/Using_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Using_Tickets__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not this attendee is using the tickets. Attendees on ticket requests can change before an event happens and the indicated attendee may no longer be using the tickets.</description>
    <label>Using Tickets</label>
    <type>Checkbox</type>
</CustomField>