force-app/main/default/objects/Attendee__c/fields/Venue_Name__c.field-meta.xml
<CustomField>
    <fullName>Venue_Name__c</fullName>
    <description>The name of the venue at which this person attended the event.</description>
    <label>Venue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>